responsive alignment fixes

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -100,6 +100,7 @@
         filter: gray;
         -webkit-filter: grayscale(1);
         -webkit-transition: all 0.8s ease-in-out;
+        transition: all 0.8s ease-in-out;
     }
 }
 
@@ -185,4 +186,10 @@
 
 .site-color {
     color: #1a1a1a;
+}
+
+@media (max-width: 767px) {
+    .footerContact {
+        padding: 30px 0 30px 0;
+    }
 }
