--- a/src/app/recent-winner/recent-winner.component.scss
+++ b/src/app/recent-winner/recent-winner.component.scss
@@ -133,7 +133,10 @@
 
 @media (max-width: 798px) {
     .innerBanners_box {
-        padding: 75px 0 50px 0;
+        padding: 0px;
+    }
+    .recentwinner-section {
+        padding: 15px 0 0px;
     }
 }
 
